#261 micro-fixes on logo alignment in purchase button

--- a/laterpay/assets/stylus/widgets/purchase_button.styl
+++ b/laterpay/assets/stylus/widgets/purchase_button.styl
@@ -16,9 +16,9 @@
         font-size                   2em                                                             !important
         left                        -0.25em                                                         !important
         line-height                 0                                                               !important
-        margin                      0 -0.15em 0 0                                                   !important
+        margin                      0 -0.5em 0 0                                                    !important
         position                    relative                                                        !important
-        top                         0.35em                                                          !important
+        top                         0.31em                                                          !important
 
     // currency ISO code
     small
@@ -32,8 +32,8 @@
 .lp_purchase-link.lp_button,
 .lp_purchase-link-without-function.lp_button
     background                      $background-laterpay                                            !important
-    background                      -webkit-linear-gradient(top, $background-laterpay 0, $background-laterpay-darker 100%) !important
-    background                      linear-gradient(to bottom, $background-laterpay 0, $background-laterpay-darker 100%) !important
+    background                      -webkit-linear-gradient(top, $background-laterpay 0, $background-laterpay-darker 100%)  !important
+    background                      linear-gradient(to bottom, $background-laterpay 0, $background-laterpay-darker 100%)    !important
     border-color                    #1c8069 #20947a                                                 !important
     border-radius                   5px                                                             !important
     border                          1px solid #20947a                                               !important
@@ -53,16 +53,15 @@
         font-size                   1.75em                                                          !important
         left                        -3px                                                            !important
         line-height                 0                                                               !important
-        margin                      0 0.1em 0 0                                                     !important
+        margin                      0 -0.2em 0 0                                                    !important
         position                    relative                                                        !important
-        top                         0.3em                                                           !important
 
     &:hover,
     &:focus,
     &:active
         background                  $background-laterpay-highlight                                  !important
-        background                  -webkit-linear-gradient(top, $background-laterpay-highlight 0, $background-laterpay 100%) !important
-        background                  linear-gradient(to bottom, $background-laterpay-highlight 0, $background-laterpay 100%) !important
+        background                  -webkit-linear-gradient(top, $background-laterpay-highlight 0, $background-laterpay 100%)   !important
+        background                  linear-gradient(to bottom, $background-laterpay-highlight 0, $background-laterpay 100%)     !important
         color                       $text-inverse                                                   !important
         text-decoration             none                                                            !important
 
